--- a/sjava-android-book/res/layout/activity_ch08.xml
+++ b/sjava-android-book/res/layout/activity_ch08.xml
@@ -43,7 +43,7 @@
         android:layout_margin="5dp"
         android:text="예제 8-11" />
 
-        <Button
+	<Button
         android:id="@+id/activity_ch08_btn_05"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
@@ -52,5 +52,25 @@
         android:layout_centerHorizontal="true"
         android:layout_margin="5dp"
         android:text="예제 8-15" />
-        
+
+	<Button
+        android:id="@+id/activity_ch08_btn_06"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/activity_ch08_btn_05"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="5dp"
+        android:text="예제 8-20" />
+	
+	<Button
+        android:id="@+id/activity_ch08_btn_07"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/activity_ch08_btn_06"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="5dp"
+        android:text="예제 8-22" />
+		
 </RelativeLayout>
